minor tweaks for formatting

--- a/PyCitySchools/PyCitySchools_ChiTran.ipynb
+++ b/PyCitySchools/PyCitySchools_ChiTran.ipynb
@@ -1454,14 +1454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['$0.00-$591.50', '$591.50-$628.00', '$628.00-$641.50', '$641.50-$655.00']\n"
+      "['\\\\$0.00-$591.50', '\\\\$591.50-$628.00', '\\\\$628.00-$641.50', '\\\\$641.50-$655.00']\n"
      ]
     },
     {
@@ -1504,7 +1504,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>$0.00-$591.50</th>\n",
+       "      <th>\\$0.00-$591.50</th>\n",
        "      <td>581.00</td>\n",
        "      <td>83.455399</td>\n",
        "      <td>83.933814</td>\n",
@@ -1513,7 +1513,7 @@
        "      <td>90.369459</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$591.50-$628.00</th>\n",
+       "      <th>\\$591.50-$628.00</th>\n",
        "      <td>615.50</td>\n",
        "      <td>81.899826</td>\n",
        "      <td>83.155286</td>\n",
@@ -1522,7 +1522,7 @@
        "      <td>81.418596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$628.00-$641.50</th>\n",
+       "      <th>\\$628.00-$641.50</th>\n",
        "      <td>638.00</td>\n",
        "      <td>78.990942</td>\n",
        "      <td>81.917212</td>\n",
@@ -1531,7 +1531,7 @@
        "      <td>65.713578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>$641.50-$655.00</th>\n",
+       "      <th>\\$641.50-$655.00</th>\n",
        "      <td>650.25</td>\n",
        "      <td>77.023555</td>\n",
        "      <td>80.957446</td>\n",
@@ -1546,27 +1546,27 @@
       "text/plain": [
        "                               Per Student Budget  Average Math Score  \\\n",
        "Spending Ranges (Per Student)                                           \n",
-       "$0.00-$591.50                              581.00           83.455399   \n",
-       "$591.50-$628.00                            615.50           81.899826   \n",
-       "$628.00-$641.50                            638.00           78.990942   \n",
-       "$641.50-$655.00                            650.25           77.023555   \n",
+       "\\$0.00-$591.50                             581.00           83.455399   \n",
+       "\\$591.50-$628.00                           615.50           81.899826   \n",
+       "\\$628.00-$641.50                           638.00           78.990942   \n",
+       "\\$641.50-$655.00                           650.25           77.023555   \n",
        "\n",
        "                               Average Reading Score  % Passing Math  \\\n",
        "Spending Ranges (Per Student)                                          \n",
-       "$0.00-$591.50                              83.933814       93.460096   \n",
-       "$591.50-$628.00                            83.155286       87.133538   \n",
-       "$628.00-$641.50                            81.917212       75.209078   \n",
-       "$641.50-$655.00                            80.957446       66.701010   \n",
+       "\\$0.00-$591.50                             83.933814       93.460096   \n",
+       "\\$591.50-$628.00                           83.155286       87.133538   \n",
+       "\\$628.00-$641.50                           81.917212       75.209078   \n",
+       "\\$641.50-$655.00                           80.957446       66.701010   \n",
        "\n",
        "                               % Passing Reading  % Overall Passing  \n",
        "Spending Ranges (Per Student)                                        \n",
-       "$0.00-$591.50                          96.610877          90.369459  \n",
-       "$591.50-$628.00                        92.718205          81.418596  \n",
-       "$628.00-$641.50                        86.089386          65.713578  \n",
-       "$641.50-$655.00                        80.675217          53.717613  "
+       "\\$0.00-$591.50                         96.610877          90.369459  \n",
+       "\\$591.50-$628.00                       92.718205          81.418596  \n",
+       "\\$628.00-$641.50                       86.089386          65.713578  \n",
+       "\\$641.50-$655.00                       80.675217          53.717613  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,17 +1582,15 @@
     "binNames = ['${:.2f}'.format(x) for x in bins]\n",
     "\n",
     "# # Create the names for the five bins\n",
-    "groupNames = [f\"{binNames[0]}-{binNames[1]}\",f\"{binNames[1]}-{binNames[2]}\",f\"{binNames[2]}-{binNames[3]}\",f\"{binNames[3]}-{binNames[4]}\"]\n",
+    "# the backslash \\ is the key to take the string after it as literal and not change it.\n",
+    "groupNames = [f\"\\{binNames[0]}-{binNames[1]}\",f\"\\{binNames[1]}-{binNames[2]}\",f\"\\{binNames[2]}-{binNames[3]}\",f\"\\{binNames[3]}-{binNames[4]}\"]\n",
     "print(groupNames)\n",
     "\n",
     "# #  Create summary\n",
     "sumByAvgBudget = schoolSummaryGroup[[\"Per Student Budget\",\"Average Math Score\",\"Average Reading Score\",\"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]]\n",
     "sumByAvgBudget[\"Spending Ranges (Per Student)\"]= pd.cut(sumByAvgBudget[\"Per Student Budget\"], bins, labels=groupNames, include_lowest=True)\n",
     "sumByAvgBudgetDf = sumByAvgBudget.groupby(\"Spending Ranges (Per Student)\").mean()\n",
-    "sumByAvgBudgetDf\n",
-    "\n",
-    "# Comment: groupNames shows correct format but after binning, the format is lost.\n",
-    "# I am not sure why. I would love to know if you know what the problem is"
+    "sumByAvgBudgetDf\n"
    ]
   },
   {
@@ -1611,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1718,7 +1716,7 @@
        "3474.0-4976         66.464293          81.059691          53.674303  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
